--- a/Rektor_2017/Literatura/Literatura.tex
+++ b/Rektor_2017/Literatura/Literatura.tex
@@ -177,11 +177,35 @@
   Sinteza linearnih sustava upravljanja, Fakultet elektrotehnike i računarstva,
   Zagreb 2016. 
   
+\bibitem{te}
+  N. Perić, I. Petrović
+  \emph{Teorija estimacije - Postupci identifikacije},
+  Teorija estimacije, Fakultet elektrotehnike i računarstva,
+  Zagreb 2016. 
+  
+\bibitem{uemp}
+  N. Perić, J. Matuško
+  \emph{Upravljanje elektromotornim pogonima - Predavanja},
+  Upravljanje elektromotornim pogonima, Fakultet elektrotehnike i računarstva,
+  Zagreb 2014. 
+  
+\bibitem{aupr}
+  N. Perić, Z. Vukić, M. Baotić, M. Vašak, N. Mišković
+  \emph{Automatsko upravljanje - Predavanje 10 - Nule, polovi i vremenski odzivi},
+  Automatsko upravljanje, Fakultet elektrotehnike i računarstva,
+  Zagreb 2016.  
+  
 \bibitem{urs}
   S. Bogdan,
   \emph{Zračna robotika: Bespilotne letjelice (UAVs)},
   Upravljanje robotskim sustavima, Fakultet Elektrotehnike i Računarstva,
   Zagreb 2009/2010.
+  
+\bibitem{fiz1}
+  S. Pleslić,
+  \emph{Priprema za predavanja iz Fizike 1},
+  Fizika 1, Fakultet Elektrotehnike i Računarstva,
+  Zagreb 2014.
   
 \bibitem{haus1}
   T. Haus, N. Prkut, K. Borovina, B. Marić, M. Orsag, S. Bogdan,
