--- a/Rektor_2017/rektor_2017.tex
+++ b/Rektor_2017/rektor_2017.tex
@@ -151,7 +151,7 @@
 \usepackage{import}
 \usepackage{standalone}
 
-\graphicspath{{Uvod/}, {CAD/}, {Exp/}, {Hardware/}, {Software/}, {Identifikacija/}, {Koncept/}, {Model/figures/}, {Software/Slike/}, {Hardware/figures/},{CAD/figures/}, {Uvod/figures/},{Exp/figures/}}
+\graphicspath{{Uvod/figures/}, {CAD/}, {Exp/}, {Hardware/}, {Software/}, {Identifikacija/figures/}, {Koncept/figures/}, {Model/figures/}, {Software/Slike/}, {Hardware/figures/},{CAD/figures/}, {Uvod/figures/},{Exp/figures/}, {Kontrola/figures/}}
 
 \hypersetup{
   colorlinks   = true, %Colours links instead of ugly boxes
@@ -239,8 +239,12 @@ Zagreb, \the\year
 \input{Model/Model}
 
 \newpage
-\section{Identifikacija}
+\section{Identifikacija parametara sustava}
 \input{Identifikacija/Identifikacija}
+
+\newpage
+\section{Upravljačka struktura}
+\input{Kontrola/Kontrola}
 
 \newpage
 \section{CAD model}
