--- a/Rektor_2017/Kontrola/Kontrola.tex
+++ b/Rektor_2017/Kontrola/Kontrola.tex
@@ -176,6 +176,8 @@ Iz navedenih razloga modelira se kaskadna upravljačka struktura za sustav letje
 	\label{fig:upr}
 \end{figure}
 
+\newpage
+
 Modeliran je koncept i odabrana je upravljačka struktura, stoga još preostaje odabrati vrstu regulatora te proračunati njegove parametre. Odabire se \textit{P} regulator za upravljanje i unutarnjom i vanjskom petljom. Parametre regulatora, pojačanja $K_{p}$, određujemo koristeći metodu \textit{krivulje mjesta korijena}. Postupak \textit{krivulje mjesta korijena}, ili skraćeno \textit{KMK}, omogućava donošenje zaključka o vladanju zatvorenog regulacijskog kruga na temelju položaja polova i nula prijenosne funkcije otvorenog regulacijskog kruga u kompleksnoj \textit{s} ravnini. Na temelju izgleda KMK-a zaključuje se o stabilnosti zatvorenog regulacijskog kruga \cite{mato}. 
 
 \medskip
