--- a/Rektor_2017/Uvod/Uvod.tex
+++ b/Rektor_2017/Uvod/Uvod.tex
@@ -173,7 +173,7 @@ Potencijalne primjene bespilotnih letjelica dijele se na dvije grupe, vojne i ci
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.35]{koord}
-	\caption{Projekt MORUS - autonomni heterogeni robotski sustav sačinjen od bespilotne letjelice i bespilotne ronilice \cite{haus2}}
+	\caption{Projekt MORUS - autonomni heterogeni robotski sustav sastavljen od bespilotne letjelice i bespilotne ronilice \cite{haus2}}
 	\label{fig:koord}
 \end{figure}
 
