Changes in Software.tex, added citation and fixed figure order

--- a/Rektor_2017/Literatura/Literatura.tex
+++ b/Rektor_2017/Literatura/Literatura.tex
@@ -164,6 +164,10 @@
 
 \bibliographystyle{plain}
 \begin{thebibliography}{9}
+	
+\bibitem{github}
+  \emph{GitHub repozitorij}, https://github.com/mbedekovic/stepperControl,
+  2017.
  
 \bibitem{cpp}
  J. Šribar, B. Motik,
