--- a/Rektor_2017/Kontrola/Kontrola.tex
+++ b/Rektor_2017/Kontrola/Kontrola.tex
@@ -268,7 +268,7 @@ Konačan iznos pojačanja P regulatora vanjske upravljačke petlje jednak je:
  \boxed{
  K_{p,out} = 1.3
  }
- \label{eq:Kp_in}
+ \label{eq:Kp_out}
  \end{equation}
 
 Stabilnost zatvorenog kruga vanjske petlje dokazuje se odzivom prijenosne funkcije zatvorenog kruga na jediničnu odskočnu pobudu (step) te je taj odziv prikazan Slikom (\ref{fig:step2}):
