--- a/Rektor_2017/Literatura/Literatura.tex
+++ b/Rektor_2017/Literatura/Literatura.tex
@@ -201,6 +201,12 @@
   Upravljanje robotskim sustavima, Fakultet Elektrotehnike i Računarstva,
   Zagreb 2009/2010.
   
+ \bibitem{ilijic}
+  S. Ilijić,
+  \emph{Mehanika},
+  Fizika 1, Fakultet Elektrotehnike i Računarstva,
+  Zagreb 2017.
+  
 \bibitem{fiz1}
   S. Pleslić,
   \emph{Priprema za predavanja iz Fizike 1},
