--- a/Rektor_2017/Model/Model.tex
+++ b/Rektor_2017/Model/Model.tex
@@ -434,7 +434,7 @@ r_{0,c} = \mu \cdot \left[
 \begin{matrix}
 (x_{1} + x_{3}) & (y_{2} + y_{4}) & 4z_{m}
 \end{matrix} \right]^{T}
-\label{eq:r0c}
+\label{eq:r0c2}
 \end{equation}
 
 gdje je $\mu = \frac{m}{M}$. Pozicija rotora u lokalnom koordinatnom sustavu opisana je s:
@@ -446,7 +446,7 @@ sin\left(\frac{\pi}{2}j\right)L & -\cos\left(\frac{\pi}{2}j\right)L & z_{r}
 \label{eq:r0rj}
 \end{equation}
 
-gdje $z_{r}$ označava vertikalni odmak rotora od ishodišta koordinatnog sustava $L_{0}$. Koristeći izraze (\ref{eq:Mfj}),(\ref{eq:r0c}) i (\ref{eq:r0rj}) slijedi izraz koji opisuje momente proizvedene od strane sila rotora:
+gdje $z_{r}$ označava vertikalni odmak rotora od ishodišta koordinatnog sustava $L_{0}$. Koristeći izraze (\ref{eq:Mfj}),(\ref{eq:r0c2}) i (\ref{eq:r0rj}) slijedi izraz koji opisuje momente proizvedene od strane sila rotora:
 \begin{equation}
 \sum_{j=1}^{4}M_{fj} = \left[
 \begin{matrix}
