Extended Software.tex

--- a/Rektor_2017/Software/Software.tex
+++ b/Rektor_2017/Software/Software.tex
@@ -162,26 +162,30 @@
 \usepackage{lscape}
 \begin{document}
 	
-U sklopu razvoja letjelice razvijena je potrebna programska podrška. Zbog specifičnosti ovakvog pristupa upravljanju multirotorskim letjelicama postojeća programska rješenja ne zadovoljavaju specifične zahtjeve ovakvog načina upravljanja. Stoga je razvijeno vlastito programsko rješenje za predstavljeni problem. Zbog specifične sklopovske arhitekture letjelice, razvijena je programska potpora za dva različita sustava: kontroler pomičnih masa i Pixhawk kontroler leta. U nastavku je dan detaljniji pregled programskih rješenja za  obje platforme. 
+U sklopu razvoja letjelice razvijena je potrebna programska podrška. Zbog specifičnosti ovakvog pristupa upravljanju multirotorskim letjelicama postojeća programska rješenja ne zadovoljavaju specifične zahtjeve ovakvog načina upravljanja. Stoga je razvijeno vlastito programsko rješenje za predstavljeni problem. Zbog specifične sklopovske arhitekture letjelice, razvijena je programska potpora za dva različita sustava: kontroler koračnih motora i Pixhawk kontroler leta. U nastavku je dan detaljniji pregled programskih rješenja za  obje platforme. 
 
 
 \subsection{Programska podrška za kontroler koračnih motora}
 
 Sklopovljem za pogon koračnih motora upravlja 32-bitni mikrokontroler STM32F4 familije (ARM M4 arhitekture). Zadaća upravljačkog sustava ove razine je
-slijeđenje proslijeđene reference pozicija pomičnih masa na kraku letjelice. Upravljački algoritam na mikrokontroleru generira impulsne signale i potrebne logičke signale koji se prosljeđuju na upravljačko sklopovlje koračnih motora. \newline
-Gibanje motora definirano je profilom brzine. Stoga upravljački algoritam daje impulse u točnim vremenskim razmacima kako bi se osiguralo slijeđenje zadanog profila brzine, a time i pravilno gibanje motora.
+slijeđenje proslijeđene reference pozicije pomičnih masa na kraku letjelice. Upravljački algoritam na mikrokontroleru generira impulsne signale i potrebne logičke signale koji se prosljeđuju na upravljačko sklopovlje koračnih motora. \newline
 
-Na slici \ref{fig:sm_stepper} ilustriran je automat stanja kojim se ostvaruje željena dinamika koračnih motora. Kako je brzina motora proporcionalna 
-frekvenciji impulsnog signala STP, variranjem frekvencije impulsa ostvaruje se promjena brzine vrtnje motora. Nakon primjene reference položaja podiže se frekvencija impulsa te motor ubrzava do maksimalne brzine gdje je frekvencija impulsa konstantna. Približavanjem referentnom položaju usporava se frekvencija impulsa, a time i motor. 
+\subsubsection{Upravljanje koračnim motorima}
+Gibanje motora definirano je profilom brzine. Stoga je zadaća upravljačkog algoritam stvaranje impulsa u točnim vremenskim razmacima kako bi se osiguralo slijeđenje zadanog profila brzine, a time i pravilno gibanje motora.
+
+Na Slici \ref{fig:sm_stepper} ilustriran je automat stanja kojim se ostvaruje željena dinamika koračnih motora. Kako je brzina motora proporcionalna 
+frekvenciji impulsnog signala STP, variranjem frekvencije impulsa ostvaruje se promjena brzine vrtnje motora. Nakon primjene reference položaja podiže se frekvencija impulsa te motor ubrzava do maksimalne brzine gdje je frekvencija impulsa konstantna. Približavanjem referentnom položaju usporava se frekvencija impulsa, a time i motor. \newline
+Kontrola vremenskog razmaka impulsa ostvarena je korištenjem vremenskog sklopa mikrokontrolera (eng. \textit{timer}) TIM4. Iz potrebne brzine motora računa se vremenski razmak između impulsa signala STP izražen u broju otkucaja takta vremenskog sklopa. Istekom vremenskog intervala vremenski sklop postavlja zahtjev za prekid čime se pokreće prekidna rutina. U prekidnoj rutini mijenja se stanje impulsnog signala i postavlja se odgovarajuća vrijednost signala DIR koji određuje smjer rotacije motora, a time i smjer gibanja mase na kraku letjelice. Nakon postavljanja vrijednosti logičkih signala, postavlja se novi vremenski razmak nakon kojeg ponovo dolazi do zahtjeva za prekid i ponavljanja iste rutine.
 
 \begin{center}
 	\centering
-	\includegraphics[width=0.7\textwidth]{{state_masina_stepper}.PNG}
+	\includegraphics[width=0.9\textwidth]{{state_masina_stepper}.PNG}
 	\captionof{figure}{Automat stanja za generiranje impulsnog signala koraka motora}
 	\label{fig:sm_stepper}
 \end{center}
 
-Pored samo automata stanja za generiranje impulsnog signala koraka, programski kod sadrži sljedeće module:
+\subsubsection{Ostale komponente programske podrške kontrolera koračnih motora}
+Pored automata stanja za generiranje impulsnog signala koraka, programski kod sadrži sljedeće module:
 \begin{itemize}
 	\item modul serijske komunikacije,
 	\item modul za upravljanje prekidnim sustavom,
